[package]
name = "morse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
[target.'cfg(unix)'.dependencies]
rppal = "0.13.1"